; ModuleID = '/home/carl/AnghaBench/linux/sound/isa/opti9xx/extr_opti92x-ad1848.c_snd_card_opti9xx_free.c'
source_filename = "/home/carl/AnghaBench/linux/sound/isa/opti9xx/extr_opti92x-ad1848.c_snd_card_opti9xx_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_card = type { %struct.snd_opti9xx* }
%struct.snd_opti9xx = type { i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_card*)* @snd_card_opti9xx_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_card_opti9xx_free(%struct.snd_card* %0) #0 {
  %2 = alloca %struct.snd_card*, align 8
  %3 = alloca %struct.snd_opti9xx*, align 8
  store %struct.snd_card* %0, %struct.snd_card** %2, align 8
  %4 = load %struct.snd_card*, %struct.snd_card** %2, align 8
  %5 = getelementptr inbounds %struct.snd_card, %struct.snd_card* %4, i32 0, i32 0
  %6 = load %struct.snd_opti9xx*, %struct.snd_opti9xx** %5, align 8
  store %struct.snd_opti9xx* %6, %struct.snd_opti9xx** %3, align 8
  %7 = load %struct.snd_opti9xx*, %struct.snd_opti9xx** %3, align 8
  %8 = icmp ne %struct.snd_opti9xx* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.snd_opti9xx*, %struct.snd_opti9xx** %3, align 8
  %11 = getelementptr inbounds %struct.snd_opti9xx, %struct.snd_opti9xx* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @release_and_free_resource(i32 %12)
  br label %14

14:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @release_and_free_resource(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
